# sketchup-link

./: .gitignore  AGENTS.md  Makefile  README.md  blender_manifest.toml  main.py  package.rb  pyproject.toml  sketchup_link.rb
.github/workflows/: ci.yml
blender_plugin/: __init__.py  blender_manifest.toml  live_adapter.py  live_sync.py  log_config.py  preferences.py  pyproject.toml  scene_importer.py  setup.py  sketchup_link.py  skp_util.py
blender_plugin/slapi/: slapi.pxd
docs/: INSTALL_PLUGIN_ON_VM.md
integration/: Dockerfile.blender  compose.yml
integration/oem/: install.bat  oem_install.bat
integration/scripts/: run-fuzz.sh  sketchup-install.sh  sketchup_launch_and_test.sh  validate-vm.sh  wait-for-plugin.sh  win-check.sh  win-exec.sh  win-screenshot.sh
scripts/: stamp_version.py
sketchup_link/: constants.rb  event_dispatcher.rb  live_adapter.py  logger.rb  main.rb  plugin.rb  remote_control.rb  server.rb  subscription_manager.rb
sketchup_link/observer/: app_observer.rb  entities_observer.rb  layers_observer.rb  materials_observer.rb  model_observer.rb  selection_observer.rb
sketchup_link/serializer/: entity_serializer.rb  model_serializer.rb  transform_serializer.rb
tests/bdd/: README.md  conftest.py  render_screenshot.py  render_wireframe_screenshot.py  run_blender_assertions.py  test_error_handling_scenarios.py  test_geometry_fidelity_scenarios.py  test_geometry_fidelity_tcp_scenarios.py  test_live_sync_scenarios.py  test_live_sync_tcp_scenarios.py  test_model_mutation_fuzz.py
tests/fuzz/: __init__.py  conftest.py  invariants.py  mutations.py  test_fuzz.py
tests/integration/: conftest.py  factories.rb  run_blender_tests.py  server.rb  test_blender_import.py  (+3 more)
(+34 files in other folders)
